@@ -20,6 +20,7 @@ siril-1.4.2
 * Added new Windows build environment, UCRT64, to expand the max limit of files in a sequence to 8192 (!987)
 * Improved robustness of python venv creation (!990)
 * Improved sirilpy.gpuhelper to provide better GPU detection and capabilities for use by the Helper classes (!988)
+* Added passing a list of sequence frame numbers to sirilpy.set_seq_frame_incl (!995)
 
 siril-1.4.1
 01/05/26
